# xMind

./: AgentFlow.md  CMakeLists.txt  LICENSE  README.md  Start.md
Config/: config.yaml  config.yml
Core/: CMakeLists.txt  main.cpp  xMindAPI.cpp  xMindAPI.h
Core/AgentGraph/: AgentGraph.h  (+8 more)
Design/: ChatGPTResult.json
DevSrv_Plugins/: xMind_Dbg.x
Docker/: Dockerfile
Documents/: mofa_agent_graph.md  mofa_programming_guide.md
Examples/: App.yml
Main/: CMakeLists.txt  main.cpp  xMindAPI.cpp  xMindAPI.h
Main/AgentGraph/: AgentGraph.cpp  AgentGraph.h  AgentGroup.h  BaseAction.h  BaseAgent.h  BufferedProcessor.h  Callable.cpp  Callable.h  CompositeAgent.h  Function.h  PropScope.h  README.md  type_def.h
Main/Common/: CantorWait.cpp  CantorWait.h  Locker.cpp  Locker.h  gthread.cpp  gthread.h  utility.cpp  utility.h
Main/Executor/: AgentGraphParser.cpp  AgentGraphParser.h  DescParser.h  LlmPool.cpp  LlmPool.h  NodeManager.h  Session.cpp  Session.h  start.cpp  start.h  varible.h
Main/Inc/: port.h  singleton.h
Main/Log/: log.cpp  log.h
Main/Memory/: entity.h  storyboard.h
Main/Python/: xMind.py
Schema/: README.md  agent_schema.yml  compositeAgent.yml  library.yml  llmPool.yml  singleAgent.yml
Scripts/: Test.py  agentflow.yml  from_python_agent_nonthreadmode_.py  from_python_agent_test.py  from_python_test.py  ipc_simple_python_test.py  ipc_simple_test.x  ipc_test.x  keystore.x  session_memory.x  test.x  test_agent_action.x  test_graph_loop.x  test_lib.py  xMind.py
Service/: agent_service.x  main.x
Test/: agentflow.yml
cli/: CMakeLists.txt  Main.cpp
(+34 files in other folders)
